# Advanced-Forecasting-with-Python-2nd-ed-2026

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
chapter_01/: Chapter 01 - Models For Forecasting.ipynb
chapter_02/: Chapter 02 - Model Evaluation for Forecasting.ipynb
chapter_03/: Chapter 03 - Model Management and Benchmarking using ML Flow.ipynb  environment.yml
chapter_04/: Chapter 04 - The AR Model.ipynb  environment.yml
chapter_05/: Chapter 05 - The MA Model.ipynb  environment.yml
chapter_06/: Chapter 06 - The ARMA Model.ipynb  environment.yml
chapter_07/: Chapter 07 - The ARIMA Model.ipynb  environment.yml
chapter_08/: Chapter 08 - The SARIMA Model.ipynb
chapter_09/: Chapter 09 - The SARIMAX Model.ipynb
chapter_10/: Chapter 10 - The VAR Model.ipynb
chapter_11/: Chapter 11 - The VARMAX Model.ipynb  environment.yml
chapter_12/: Chapter 12 - The Linear Regression.ipynb  environment.yml
chapter_13/: Chapter 13 - The Decision Tree.ipynb
chapter_14/: Chapter 14 - The kNN Model.ipynb
chapter_15/: Chapter 15 - The Random Forest.ipynb  births_data.csv
chapter_16/: environment.yml
chapter_17/: Chapter 17 - pyBATS.ipynb  environment.yml
chapter_18/: Chapter 18 - Neural Networks.ipynb
chapter_19/: Chapter 19 - RNNs using SimpleRNN and GRU.ipynb  environment.yml
chapter_20/: Chapter 20 - LSTMs.ipynb
chapter_21/: Chapter 21 - nbeats.ipynb  environment.yml
chapter_22/: Chapter 22 - transformers.ipynb  environment.yml
chapter_23/: Chapter 23 - NeuralProphet.ipynb  environment.yml
chapter_24/: Chapter24_GluonTS_Deepar.ipynb  (+1 more)
(+4 files in other folders)
