[project]
name = "advanced-forecasting-with-python-2nd-ed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "ipython~=8.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mlflow>=3.1",
    "pandas<3",
    "scikit-learn>=1.8.0",
    "setuptools>=72.0.0,<80.0.0",
    "ydata-profiling>=4.12.2",
    "yfinance>=1.2.0",
]
